# rp2-firmware-template

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json.def  LICENSE  Readme.md  generate_presets.py  main.c  pico_sdk_import.cmake  template.cmake
.github/workflows/: build.yml  clang-tidy.yml  unit-tests.yml
app/: CMakeLists.txt  main.c
cmake/: PicoHelpers.cmake  bringup_helper.cmake  clang_tools.cmake  pico_size_tool.cmake
scripts/: check-format.sh  clang-format.sh  clang-tidy.sh  generate_presets.py  pico_size_tool.py  setup.py
src/demo/: CMakeLists.txt  demo.cpp  demo.hpp
tests/: CMakeLists.txt  test_demo.cpp  test_demo.hpp
